[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/autoloads/GameMusic.gd" type="Script" id=1]
[ext_resource path="res://assets/Sounds/Don't Leave.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/Sounds/switch_002.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Sounds/Don't Leave(Action).ogg" type="AudioStream" id=4]

[node name="GameMusic" type="Node"]
script = ExtResource( 1 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "GUI"

[node name="Win" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="Lose" type="AudioStreamPlayer" parent="."]
bus = "SFX"
